--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~10.0.9",
     "@angular/platform-browser-dynamic": "~10.0.9",
     "@angular/router": "~10.0.9",
+    "angular-cli-ghpages": "^0.6.2",
     "bootstrap": "^3.4.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
